--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<header>Heroes</header>
 <body>
+    <ol>
+        <li>Babbage</li>
+        <li>Berners-lee</li>
+        <li>Clarke</li>
+        <li>Hamilton</li>
+        <li>Hopper</li>
+        <li>Lovelace</li>
+        <li>Turing</li>
+        </li>
+    </ol>
     
 </body>
+<footer></footer>
 </html>
